--- a/src/templates/steps-links-edit.html
+++ b/src/templates/steps-links-edit.html
@@ -1,9 +1,9 @@
 <div class='row mt-4'>
     <!-- STEPS -->
     <section class='col-md-6'>
-      <h4 data-action='toggle-next' data-toggle-next-n='2' data-icon='stepsDivIcon'><i id='stepsDivIcon' class='fas fa-chevron-circle-down'></i> <i class='fas fa-fw fa-check-square'></i> {{ 'Steps'|trans }}</h4>
+      <h4 data-action='toggle-next' data-toggle-next-n='2' data-icon='stepsDivIcon' class='d-inline'><i id='stepsDivIcon' class='fas fa-chevron-circle-down'></i> <i class='fas fa-fw fa-check-square'></i> {{ 'Steps'|trans }}</h4>
       <!-- ADD STEP -->
-      <div class='input-group mb-3'>
+      <div class='input-group mt-2 mb-3'>
           <div class='input-group-prepend'>
             <span class='input-group-text'>{{ 'Add a step'|trans }}</span>
           </div>
@@ -83,9 +83,9 @@
     </section>
     <!-- LINKS -->
     <section class='col-md-6'>
-        <h4 data-action='toggle-next' data-toggle-next-n='2' data-icon='linksDivIcon'><i id='linksDivIcon' class='fas fa-chevron-circle-down'></i> <i class='fas fa-fw fa-link'></i> {{ 'Linked items'|trans }}</h4>
+        <h4 data-action='toggle-next' data-toggle-next-n='2' data-icon='linksDivIcon' class='d-inline'><i id='linksDivIcon' class='fas fa-chevron-circle-down'></i> <i class='fas fa-fw fa-link'></i> {{ 'Linked items'|trans }}</h4>
         <!-- ADD LINK -->
-        <div class='input-group mb-3'>
+        <div class='input-group mt-2 mb-3'>
             <div class='input-group-prepend'>
                 <span class='input-group-text'>{{ 'Add a link'|trans }}</span>
             </div>
