--- a/src/templates/steps-links-edit.html
+++ b/src/templates/steps-links-edit.html
@@ -95,23 +95,23 @@
             <ul class='list-group'>
                 {% for link in Entity.entityData.links %}
                   <li class='list-group-item'>
+                    <div class='float-right ml-1'>
+                      {% if mode != 'edit-template' %}
+                        <a data-action='import-links' data-target='{{ link.itemid }}' title='{{ 'Import links'|trans }}'>
+                          <i class='fas fa-arrows-down-to-line'></i>
+                        </a>
+
+                        <a data-action='import-link-body' data-target='{{ link.itemid }}' title='{{ 'Import'|trans }}'>
+                          <i class='fas fa-lg fa-file-import'></i>
+                        </a>
+                      {% endif %}
+                      <a data-action='destroy-link' data-target='{{ link.itemid }}' title='{{ 'Delete'|trans }}'>
+                        <i class='fas fa-lg fa-trash-alt'></i>
+                      </a>
+                    </div>
                     <i class='fas fa-link mr-1'></i>
                     <span class='item-category' style='color:#{{ link.color|raw }}'>{{ link.name|raw }}</span> - <a href='database.php?mode=view&id={{ link.itemid }}'>
                   {{ link.title|raw }}</a>
-                  <div class='float-right'>
-                    {% if mode != 'edit-template' %}
-                      <a data-action='import-links' data-target='{{ link.itemid }}' title='{{ 'Import links'|trans }}'>
-                        <i class="fas fa-arrows-down-to-line"></i>
-                      </a>
-
-                      <a data-action='import-link-body' data-target='{{ link.itemid }}' title='{{ 'Import'|trans }}'>
-                        <i class='fas fa-lg fa-file-import'></i>
-                      </a>
-                    {% endif %}
-                    <a data-action='destroy-link' data-target='{{ link.itemid }}' title='{{ 'Delete'|trans }}'>
-                      <i class='fas fa-lg fa-trash-alt'></i>
-                    </a>
-                  </div>
                 </li>
                 {% endfor %}
             </ul>
