--- a/src/templates/profile.html
+++ b/src/templates/profile.html
@@ -2,69 +2,67 @@
 
 {% block body %}
 <!-- USER INFOS -->
-<section class='box'>
-    <h5 class='d-inline'><i class='fas fa-user mr-1'></i>{{ 'Info'|trans }}</h5>
-    <hr>
-    <div>
-      <h4>{{ App.Users.userData.fullname|raw }} ({{ App.Users.userData.email }})</h4>
-      <!-- TEAM -->
-      <h5>{{ 'Member of:'|trans }}
-      {% for team in teamsArr %}
-        <span class='btn btn-secondary disabled'>{{ team.name }}</span>
-      {% endfor %}
-      </h5>
-      {% if teamGroupsArr %}
-        <h5>{{ 'Groups'|trans }}:
-        <ul>
-          {% for teamGroup in teamGroupsArr %}
-            <li class='mt-2'>{{ teamGroup.name }}
-            {% for user in teamGroup.users %}
-              <span class='btn btn-secondary disabled'>{{ user.fullname|raw }}</span>
-            {% endfor %}
-            </li>
+<h3 class='p-2 pl-3 section-title'><i class='fas fa-user mr-1'></i>{{ 'Info'|trans }}</h3>
+  <div class='pl-3 mt-2 mb-5'>
+    <h4>{{ App.Users.userData.fullname|raw }} ({{ App.Users.userData.email }})</h4>
+    <!-- TEAM -->
+    <h5>{{ 'Member of:'|trans }}
+    {% for team in teamsArr %}
+      <span class='btn btn-secondary disabled'>{{ team.name }}</span>
+    {% endfor %}
+    </h5>
+    {% if teamGroupsArr %}
+      <h5>{{ 'Groups'|trans }}:
+      <ul>
+        {% for teamGroup in teamGroupsArr %}
+          <li class='mt-2'>{{ teamGroup.name|raw }}
+          {% for user in teamGroup.users %}
+            <span class='btn btn-secondary disabled'>{{ user.fullname|raw }}</span>
           {% endfor %}
-        </ul>
-        </h5>
-      {% endif %}
-      <p><a href='ucp.php'>{% trans %}Go to user control panel{% endtrans %}</a>
-    </div>
-</section>
+          </li>
+        {% endfor %}
+      </ul>
+      </h5>
+    {% endif %}
+    <p><a href='ucp.php'>{% trans %}Go to user control panel{% endtrans %}</a>
+  </div>
 
 <!-- STATUS STAT -->
-<section class='box'>
-    {% if count == 0 %}
-      {{ 'No statistics available yet.'|trans }}
-    {% else %}
-      <h5 class='d-inline'><i class='fas fa-chart-pie mr-1'></i>{{ 'Statistics'|trans }}</h5>
-      <hr>
-      <h4>{% trans %}
-            Experiment
-            {% plural 2 %}
-            Experiments
-            {% endtrans %}</h4>
-      <p>{{ count }} {% trans %}
-          experiments done since
-          {% endtrans %} {{ App.Users.userData.register_date|date("l jS \\of F Y") }}</p>
-      <div class='row'>
-        <div class='col col-md-3'>
-          <div class='pie-chart' style='--pie-data: {{ pieDataCss }}'></div>
-        </div>
-        <div class='col col-md-3'>
-          <ul class='pie-legend'>
-            {% for status in pieData %}
-            <li style='color: {{ status.color }}'><span class='pie-percent' style='--bg: {{ status.color }}'>{{ status.percent }}%</span>{{ status.name }} ({{ status.count }})</li>
-            {% endfor %}
-          </ul>
-        </div>
+<h3 class='p-2 pl-3 section-title'><i class='fas fa-chart-pie mr-1'></i>{{ 'Statistics'|trans }}</h3>
+  <div class='pl-3 mt-2 mb-5'>
+  {% if count == 0 %}
+    {{ 'No statistics available yet.'|trans }}
+  {% else %}
+    <h4>{% trans %}
+          Experiment
+          {% plural 2 %}
+          Experiments
+          {% endtrans %}</h4>
+    <p>{{ count }} {% trans %}
+        experiments done since
+        {% endtrans %} {{ App.Users.userData.register_date|date("l jS \\of F Y") }}</p>
+    <div class='row'>
+      <div class='col col-md-3'>
+        <div class='pie-chart' style='--pie-data: {{ pieDataCss }}'></div>
       </div>
-    {% endif %}
-</section>
+      <div class='col col-md-3'>
+        <ul class='pie-legend'>
+          {% for status in pieData %}
+          <li style='color: {{ status.color }}'><span class='pie-percent' style='--bg: {{ status.color }}'>{{ status.percent }}%</span>{{ status.name }} ({{ status.count }})</li>
+          {% endfor %}
+        </ul>
+      </div>
+    </div>
+  {% endif %}
+</div>
 
-<section class='box'>
-  <h3>{{ 'Export all your experiments'|trans }}</h3>
+<!-- EXPORT EXPERIMENTS -->
+<h3 class='p-2 pl-3 section-title'><i class='fas fa-download mr-1'></i>{{ 'Export all your experiments'|trans }}</h3>
+<div class='pl-3 mt-2 mb-5'>
+  <div class='d-flex justify-content-between'>
     <input hidden id='userExport' value='{{ App.Users.userData.userid }}'>
-    <label for='userExportFormat'>{{ 'Select export format:'|trans }}</label>
-    <select class='form-control col-md-4' id='userExportFormat' autocomplete='off'>
+    <label for='userExportFormat' class='col-form-label'>{{ 'Select export format'|trans }}</label>
+    <select class='form-control col-md-3' id='userExportFormat' autocomplete='off'>
       <option value='eln'>{{ 'Make an ELN'|trans }}</option>
       <option value='zip'>{{ 'Make Zip'|trans }}</option>
       <option value='csv'>{{ 'Make Csv'|trans }}</option>
@@ -72,11 +70,11 @@
       <option value='qrpdf'>{{ 'Make QR codes PDF'|trans }}</option>
       <option value='json'>{{ 'Make JSON'|trans }}</option>
     </select>
-    <div class='mt-2'>
-      <button data-action='export-user' class='button btn btn-primary'>{{ 'Export'|trans }}</button>
-    </div>
-
-</section>
+  </div>
+  <div class='mt-2 text-center'>
+    <button data-action='export-user' class='button btn btn-primary'>{{ 'Export'|trans }}</button>
+  </div>
+</div>
 
 <div id='info' data-page='profile'></div>
 {% endblock body %}
