--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -719,9 +719,8 @@ button:disabled {
 }
 
 .item-category {
-    font-size: 80%;
+    font-size: 72%;
     text-transform: uppercase;
-    color: $medium;
 }
 
 .item a p:hover {
@@ -914,6 +913,10 @@ the form-control fails to do that so we do the border ourselves */
 /* background for archived users */
 .bg-medium {
     background-color: $secondlevel;
+}
+
+.bg-firstlevel {
+    background-color: $firstlevel;
 }
 
 /* print only the main div */
